# owncloud-synology

./: .README.md.kate-swp  README-Nextcloud.md  README-Syncthing.md  README.md  docker-compose-main.yml  docker-compose-nextcloud.yml  docker-compose-syncthing.yml  docker-compose.yml  grocy.env
spark/: Dockerfile
synology_monitor_deamon/: Dockerfile  Pipfile  app.py
xiaomi-mqtt/: app.py  pyproject.toml
xiaomi-mqtt/tests/: test_xiaomi_mqtt.py
