[tool.poetry]
name = "xiaomi-mqtt"
version = "0.1.0"
description = ""
authors = ["Dariusz Wójcik <dariusz.patryk.wojcik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
